# RecordRoute

./: .env.example  .gitignore  .gitmodules  AGENTS.md  API.md  CLAUDE.md  DEVELOPMENT_SETUP.md  GEMINI.md  README.md  RecordRouteAPI.spec  TODO.md  TodoList.md  build-all.sh  build-backend.bat  build-backend.sh  build.bat  build.sh  embedding_pipeline.py  main.js  package-lock.json  package.json  requirements.txt  run.bat  run.command  run.sh  server.py  setup.bat  setup.command  setup.sh  start.bat  start.sh  start.vbs  test_vocab_system.py  vector_search.py
.cloudflared/: config.yml
TODO/: Electron.md  GUI.md  Graph.md  MVVM.md  RUST.md  Rust.md  TODO.md  rust-migration.md
deprecated/scripts/: start.vbs
deprecated/sttEngine/: config.py  keyword_frequency.py  ollama_utils.py  one_line_summary.py  path_utils.py  requirements.txt  workflow_runner.py
electron/: main.js  package.json  preload.js
frontend/: history.js  overlay.js  package.json  queue.js  search.js  upload.css  upload.html  upload.js
legacy/python-backend/: config.py  embedding_manager.py  logger.py  ollama_utils.py  run_workflow.py  search_cache.py  search_utils.py  server.py  websocket_server.py
legacy/python-backend/workflow/: correct.py
recordroute-rs/: .gitignore  API.md  ARCHITECTURE.md  CONFIGURATION.md  Cargo.toml  README.md
recordroute-rs/crates/common/: Cargo.toml
recordroute-rs/crates/common/src/: config.rs  error.rs  lib.rs  logger.rs  model_manager.rs
recordroute-rs/crates/llm/: Cargo.toml
recordroute-rs/crates/llm/src/: chunking.rs  client.rs  lib.rs  llamacpp_client.rs  llm_trait.rs  prompts.rs  summarize.rs  types.rs
recordroute-rs/crates/recordroute/: Cargo.toml
recordroute-rs/crates/recordroute/src/: main.rs
recordroute-rs/crates/server/: Cargo.toml
recordroute-rs/crates/server/src/: error.rs  history.rs  job_manager.rs  lib.rs  state.rs  types.rs  websocket.rs  workflow.rs
recordroute-rs/crates/server/src/routes/: cache.rs  download.rs  embedding.rs  history.rs  mod.rs  models.rs  process.rs  record.rs  search.rs  system.rs  tasks.rs  upload.rs
recordroute-rs/crates/stt/: Cargo.toml
recordroute-rs/crates/stt/src/: audio.rs  lib.rs  postprocess.rs  types.rs  whisper.rs
recordroute-rs/crates/vector/: Cargo.toml
recordroute-rs/crates/vector/src/: engine.rs  lib.rs  similarity.rs  types.rs
scripts/: build-all.sh  build-backend.sh  start.vbs
sttEngine/: bootstrap.py  config.py  embedding_pipeline.py  file_operations.py  file_utils.py  history_manager.py  llamacpp_utils.py  logger.py  mcp_client.py  obsidian_mcp.py  one_line_summary.py  registry_manager.py  requirements.txt  run.bat  run_workflow.py  search_cache.py  server.py  setup.bat  task_manager.py  test_mcp_connection.py  vector_search.py  vocabulary_manager.py  websocket_server.py
sttEngine/workflow/: correct.py  summarize.py  transcribe.py
tools/scripts/: build-all.bat  build-all.sh  build-backend.sh  build-llama.bat  build-llama.sh  build-rust.sh  download-whisper-model.bat  download-whisper-model.sh  run.command  setup.bat  setup.sh  start.bat
