[package]
name = "recordroute-llm"
version = "0.1.0"
edition = "2021"

[dependencies]
recordroute-common = { path = "../common" }

reqwest = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
