[package]
name = "recordroute-llm"
version = "0.1.0"
edition = "2021"

[dependencies]
recordroute-common = { path = "../common" }

llama-cpp-2 = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[features]
default = []
# GPU acceleration for llama.cpp backend
cuda = ["llama-cpp-2/cuda"]
metal = ["llama-cpp-2/metal"]
