[package]
name = "recordroute-llm"
version = "0.1.0"
edition = "2021"

[dependencies]
recordroute-common = { path = "../common" }

reqwest = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[features]
default = []
# GPU acceleration for llama.cpp backend
cuda = ["llama-cpp-2/cuda"]
metal = ["llama-cpp-2/metal"]

# Platform-specific llama-cpp-2 configuration
# macOS: Metal by default
[target.'cfg(target_os = "macos")'.dependencies]
llama-cpp-2 = { workspace = true, features = ["metal"] }

# Linux/Windows: CPU by default, users can enable CUDA with --features cuda
[target.'cfg(not(target_os = "macos"))'.dependencies]
llama-cpp-2 = { workspace = true }
