[package]
name = "recordroute-server"
version = "0.1.0"
edition = "2021"

[dependencies]
recordroute-common = { path = "../common" }
recordroute-stt = { path = "../stt" }
recordroute-llm = { path = "../llm" }
recordroute-vector = { path = "../vector" }

actix-web = { workspace = true }
actix-files = { workspace = true }
actix-ws = { workspace = true }
actix-cors = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-actix-web = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
