[package]
name = "recordroute-stt"
version = "0.1.0"
edition = "2021"

[dependencies]
recordroute-common = { path = "../common" }

symphonia = { workspace = true }
ffmpeg-next = { workspace = true, optional = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
regex = "1"

[features]
default = []
ffmpeg = ["ffmpeg-next"]
# GPU acceleration features
cuda = ["whisper-rs/cuda"]
metal = ["whisper-rs/metal"]

# Platform-specific whisper-rs configuration
# macOS: Metal by default
[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = { workspace = true, features = ["metal"] }

# Linux/Windows: CPU by default, users can enable CUDA with --features cuda
[target.'cfg(not(target_os = "macos"))'.dependencies]
whisper-rs = { workspace = true }
